fixes some stroke lengths on IE

--- a/src/mmgd.scss
+++ b/src/mmgd.scss
@@ -203,8 +203,8 @@ svg {
 #gd_plate {
   left: 380px;
   top: -410px;
-  stroke-dasharray: 600;
-  stroke-dashoffset: 600;
+  stroke-dasharray: 620;
+  stroke-dashoffset: 620;
 }
 
 #gd_fun {
@@ -220,8 +220,8 @@ svg {
 #gd_blue_copy {
   left: 220px;
   top: -30px;
-  stroke-dasharray: 430;
-  stroke-dashoffset: 430;
+  stroke-dasharray: 450;
+  stroke-dashoffset: 450;
 }
 
 #river {
